--- a/client/index.scss
+++ b/client/index.scss
@@ -9,7 +9,7 @@ body {
   display: flex;
   justify-content: center;
 
-  background: linear-gradient(to bottom right, #fc6767, #ec008c);
+  background: linear-gradient(#7C8697 12%, #FAF9F9 12%);
   font-size: 1.5rem;
 }
 
