--- a/client/src/styles/main.sass
+++ b/client/src/styles/main.sass
@@ -1,6 +1,41 @@
+$black: #0D0F13
+$gray: #7C8697
+$dark-gray: #353E54
+$white: #FAF9F9
+$red: #A12525
+$green: #A2BD51
+$blue: #60AEBA
+$font-stack: Helvetica, sans-serif
+
+
 body
     padding: 0
     margin: 0
 
 .content
-    margin: 15% 40%
+    margin: 5% 40%
+
+.navbar-route
+    font: 100% $font-stack
+    border-radius: 0px
+    width: 15vw
+    background-color: $dark-gray
+
+.plain-text.big
+    font-size: 10vh
+
+.button.regular.standard, .button.regular.standard:focus, .button.regular.standard:active
+    background-color: $dark-gray
+
+.button.regular.standard:hover
+    background-color: $blue
+
+.title
+    border-radius: 0px
+    height: 15vh
+    background-color: $gray
+    color: $white
+    font: 100% Impact
+    display: flex
+    padding-left: 1%
+    align-items: center
