--- a/client/src/styles/main.sass
+++ b/client/src/styles/main.sass
@@ -22,17 +22,21 @@ body
     background-color: $dark-gray
 
 .plain-text.big
-    font-size: 10vh
+    font-size: 8em
+
+.plain-text.medium
+    font-size: 2em
 
 .button.regular.standard, .button.regular.standard:focus, .button.regular.standard:active
     background-color: $dark-gray
+    font-size: 3em
 
 .button.regular.standard:hover
     background-color: $blue
 
 .title
     border-radius: 0px
-    height: 15vh
+    height: 1.5em
     background-color: $gray
     color: $white
     font: 100% Impact
