Home and search mockup

--- a/client/src/styles/main.sass
+++ b/client/src/styles/main.sass
@@ -83,5 +83,30 @@ body
 .fs-big
     font-size: 10vh
 
+.fs-10vh
+    font-size: 10vh
+
+.fs-8vh
+    font-size: 8vh
+
+.fs-13vh
+    font-size: 13vh
+
+.bg-gray
+    background-color: $gray
+
 .bg-dark-gray
     background-color: $dark-gray
+
+a.no-highlight
+    text-decoration: none
+    color: inherit
+
+a.no-highlight:hover
+    text-decoration: none
+    color: inherit
+
+.search-input
+    border-radius: 20px
+    background-color: #eaeaec
+    outline: none !important
