--- a/client/src/styles/main.sass
+++ b/client/src/styles/main.sass
@@ -29,18 +29,18 @@ $title-height: 12vh
 //    color: $black
 //
 body
-    padding: 0
-    margin: 0
-    font: $font-impact
+  padding: 0
+  margin: 0
+  font: $font-impact
 
 //.content
 //    margin: 5% 40%
 //
 .navbar-route
-    font: $font-sans
-    border-radius: 0
-    width: 15vw
-    background-color: $dark-gray
+  font: $font-sans
+  border-radius: 0
+  width: 15vw
+  background-color: $dark-gray
 //
 //.plain-text.big
 //    font-size: 10vh
@@ -67,46 +67,58 @@ body
 
 //
 .navigation
-    height: 100-$title-height
-    background-color: $dark-gray
+  height: 100-$title-height
+  background-color: $dark-gray
 
 .title
-    border-radius: 0
-    height: $title-height
-    background-color: $gray
-    color: $white
-    font: $font-impact
-    display: flex
-    padding-left: 1%
-    align-items: center
+  border-radius: 0
+  height: $title-height
+  background-color: $gray
+  color: $white
+  font: $font-impact
+  display: flex
+  padding-left: 1%
+  align-items: center
 
 .fs-big
-    font-size: 10vh
+  font-size: 10vh
 
 .fs-10vh
-    font-size: 10vh
+  font-size: 10vh
 
 .fs-8vh
-    font-size: 8vh
+  font-size: 8vh
 
 .fs-13vh
-    font-size: 13vh
+  font-size: 13vh
 
 .bg-gray
-    background-color: $gray
+  background-color: $gray
 
 .bg-dark-gray
-    background-color: $dark-gray
+  background-color: $dark-gray
+
+.bg-customize
+  background-color: #4ab0bb
+
+.bg-buy
+  background-color: #90cb4a
+
+.bg-sell
+  background-color: #ac0018
 
 a.no-highlight
-    text-decoration: none
-    color: inherit
+  text-decoration: none
+  color: inherit
 
 a.no-highlight:hover
-    text-decoration: none
-    color: inherit
+  text-decoration: none
+  color: inherit
 
 .search-input
-    border-radius: 20px
-    background-color: #eaeaec
-    outline: none !important
+  border-radius: 20px
+  background-color: #eaeaec
+  outline: none !important
+
+.rounded-4
+  border-radius: 20px !important
