removed unused sass

--- a/client/src/styles/main.sass
+++ b/client/src/styles/main.sass
@@ -10,64 +10,20 @@ $font-serif: 100% Times New Roman, serif
 $font-georgia: 100% Georgia, Times New Roman, serif
 $font-impact: 100% Impact, Helvetica
 $title-height: 12vh
-//
-//@mixin card($color)
-//    .card-header
-//        font: $font-georgia
-//        font-size: 1.5vw
-//    .card-body
-//        font: $font-serif
-//        font-size: 1vw
-//    .card-footer
-//        font: $font-georgia
-//        font-style: italic
-//        font-size: 1vw
-//        text-align: right
-//    &:hover
-//        background-color: rgba($color, .5)
-//    background-color: rgba($color, .27)
-//    color: $black
-//
+
 body
   padding: 0
   margin: 0
   font: $font-impact
 
-//.content
-//    margin: 5% 40%
-//
 .navbar-route
   font: $font-sans
   border-radius: 0
   width: 15vw
   background-color: $dark-gray
-//
-//.plain-text.big
-//    font-size: 10vh
-//
-//.plain-text.medium
-//    font-size: 2vh
-//
-//.button.regular.standard, .button.regular.standard:focus, .button.regular.standard:active
-//    background-color: $dark-gray
-//    font-size: 3vh
-//
-//.button.regular.standard:hover
-//    background-color: $blue
-//
-//.card.interaction.regular.info
-//    @include card($gray)
-//
-//.card.interaction.regular.danger
-//    @include card($red)
-//
-//.card.interaction.regular.success
-//    @include card($green)
-//
 
-//
 .navigation
-  height: 100-$title-height
+  height: 5%
   background-color: $dark-gray
 
 .title
