Better colors for news

--- a/client/src/styles/main.sass
+++ b/client/src/styles/main.sass
@@ -2,9 +2,9 @@ $black: #0D0F13
 $gray: #7C8697
 $dark-gray: #353E54
 $white: #FAF9F9
-$red: #A12525
-$green: #A2BD51
-$blue: #60AEBA
+$red: #d66969
+$green: #62ca67
+$blue: #c5d3d6
 $font-sans: 100% Helvetica, sans-serif
 $font-serif: 100% Times New Roman, serif
 $font-georgia: 100% Georgia, Times New Roman, serif
@@ -62,6 +62,15 @@ body
 
 .bg-sell
   background-color: #ac0018
+
+.bg-success-custom
+  background-color: $green !important
+
+.bg-danger-custom
+  background-color: $red !important
+
+.bg-basic-custom
+  background-color: $blue !important
 
 a.no-highlight
   text-decoration: none
